deploy/strimzi/connects/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trading-connect
  namespace: trading
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: connect.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trading-connect-connect-api
            port:
              number: 8083
