deploy/strimzi/connects/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-world-to-connect
  namespace: trading
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: trading-connect
      strimzi.io/kind: KafkaConnect
      strimzi.io/name: trading-connect-connect
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 8083
      protocol: TCP
